; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_SGIX_instruments.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_SGIX_instruments.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_SGIX_instruments = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"glGetInstrumentsSGIX\00", align 1
@glad_glGetInstrumentsSGIX = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [24 x i8] c"glInstrumentsBufferSGIX\00", align 1
@glad_glInstrumentsBufferSGIX = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [22 x i8] c"glPollInstrumentsSGIX\00", align 1
@glad_glPollInstrumentsSGIX = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [22 x i8] c"glReadInstrumentsSGIX\00", align 1
@glad_glReadInstrumentsSGIX = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [23 x i8] c"glStartInstrumentsSGIX\00", align 1
@glad_glStartInstrumentsSGIX = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [22 x i8] c"glStopInstrumentsSGIX\00", align 1
@glad_glStopInstrumentsSGIX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_SGIX_instruments to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_SGIX_instruments(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_SGIX_instruments, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %19

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glGetInstrumentsSGIX, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glInstrumentsBufferSGIX, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glPollInstrumentsSGIX, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glReadInstrumentsSGIX, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glStartInstrumentsSGIX, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glStopInstrumentsSGIX, align 8
  br label %19

19:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
